fixed mistakes after st review